# llm-automation-agent

./: Dockerfile  License.md  hello.py  pyproject.toml
app/: file_utils.py  main.py  openai_client.py  task_handler.py  tools.json
app/tasks/: __init__.py  count_day_occurences.py  extract_credit_card_number.py  extract_sender_email.py  find_most_similar_comments.py  format_markdown.py  generate_markdown_index.py  query_db.py  run_datagen.py  sort_contacts.py  write_recent_log_lines.py
