[project]
name = "tds-p1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "httpx>=0.28.1",
    "numpy>=2.2.3",
    "pillow>=11.1.0",
    "pytesseract>=0.3.13",
    "uv>=0.6.0",
    "uvicorn>=0.34.0",
]
